--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ html {
 body {
   background-color: var(--bg-color);
   color: var(--txt-color);
+
 }
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -86,7 +88,6 @@ section {
 }
 .navbar a {
   font-size: 1.5vmax;
-
  }
  section
  {
@@ -198,6 +199,8 @@ section {
 .theme-toggle i {
   font-size: 20px;
   color: rgb(3, 3, 38);
+  transition: background-color 0.3s, box-shadow 0.3s;
+  
 }
 
 .theme-toggle .fa-moon {
@@ -213,7 +216,8 @@ body.dark-theme {
 body.dark-theme .header,
 body.dark-theme .footer,
 body.dark-theme .navbar {
-  background-color: black;
+  background-color: black;  
+  transition: background-color 0.3s, box-shadow 0.3s;
   color: #ffffff;
 }
 
@@ -234,6 +238,7 @@ body.dark-theme .theme-toggle .fa-moon {
 
 body.dark-theme a {
   color: #f1c40f;
+  background-color: transparent;
 }
 
 body.dark-theme button {
@@ -765,7 +770,6 @@ span {
   width: 290px;
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   background: -webkit-linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
-  border-radius: 10px;
   margin: 10px;
   align-self: stretch;
   flex: 1 1 21%;
@@ -815,8 +819,6 @@ span {
   height: 290px;
   width: 100%;
   overflow: hidden;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   filter: drop-shadow(0px 2px 2px #133813aa);
 }
 
@@ -883,7 +885,7 @@ a {
 
 .portfolio-container .portfolio-box {
   position: relative;
-  border-radius: 2rem;
+  border-radius: 1rem;
   box-shadow: 0 0 1rem var(--bg-color);
   overflow: hidden;
   display: flex;
@@ -1886,6 +1888,10 @@ font-size: 36px;
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+a{
+  background-color: transparent;
 }
 
 /* Preloader Css Ends */
